k8s/springboot/catalogservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog-deploy
spec:
  selector:
    matchLabels:
      app: catalog-app
  replicas: 1
  template:
    metadata:
      labels:
        app: catalog-app
    spec:
      containers:
        - name: catalog-service
          image:
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: 500m
              memory: 1000Mi
---
apiVersion: v1
kind: Service
metadata:
  name: catalog-service
spec:
  type: NodePort
  selector:
    app: catalog-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30003
