k8s/springboot/firstservice.yaml
# https://kubernetes.io/docs/concepts/workloads/controllers/deployment/
apiVersion: apps/v1
kind: Deployment
metadata:
  name: firstservice
  namespace: default
  labels:
    app: firstservice
spec:
  selector:
    matchLabels:
      app: firstservice
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: firstservice
    spec:
      containers:
      - name: firstservice
        image: parkmyounghoi/firstservice:k8.0.6
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 1000Mi
        ports:
        - containerPort: 20010
          name: firstservice
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: firstservice
spec:
  ports:
  - nodePort: 30081
    port: 20010
    targetPort: 20010
  selector:
    app: firstservice
  type: LoadBalancer
