k8s/springboot/orderservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-deploy
spec:
  selector:
    matchLabels:
      app: order-app
  replicas: 1
  template:
    metadata:
      labels:
        app: order-app
    spec:
      containers:
        - name: order-service
          image:
          imagePullPolicy: Always
          ports:
            - containerPort: 10000
              protocol: TCP
          resources:
            requests:
              cpu: 500m
              memory: 1000Mi
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
spec:
  type: NodePort
  selector:
    app: order-app
  ports:
    - protocol: TCP
      port: 10000
      targetPort: 10000
      nodePort: 30002
