k8s/springboot/userservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-deploy
spec:
  selector:
    matchLabels:
      app: user-deploy
  replicas: 1
  template:
    metadata:
      labels:
        app: user-deploy
    spec:
      containers:
        - name: user-service
          image: parkmyounghoi/userservice:k8.0.2
          imagePullPolicy: Always
          ports:
            - containerPort: 60000
              protocol: TCP
          resources:
            requests:
              cpu: 500m
              memory: 1000Mi
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  type: NodePort
  selector:
    app: user-deploy
  ports:
    - protocol: TCP
      port: 60000
      targetPort: 60000
      nodePort: 30001
