k8s/springboot/ingress-config.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pmh-ingress
spec:
  rules:
  - host: first.hellomh.site
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: firstservice
            port:
              number: 8081
  - host: second.hellomh.site
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: secondservice
            port:
              number: 8082
  ingressClassName: nginx
